add relogin funtion

--- a/StackOverflow/Views/Shared/_Layout.cshtml
+++ b/StackOverflow/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     }
                     else
                     {
-                        <li>@Html.ActionLink("Log out", "Log_out", "Account", new { id = Session["ID"] },null)</li>
+                        <li>@Html.ActionLink("Log out", "Log_out", "Account")</li>
                         <li>@Html.ActionLink("Edit Profile", "Edit", "Account", new { id = Session["ID"] },null)</li>
                     }
                 </ul>
