--- a/StackOverflow/Views/Question/Index.cshtml
+++ b/StackOverflow/Views/Question/Index.cshtml
@@ -15,6 +15,16 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
      
+
+        @*<div class="form-group">
+            @Html.LabelFor(model => model.UserID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.UserID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
+            </div>
+        </div>*@
+
+
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -33,7 +43,7 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.Problem, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-lg-12">
+            <div class="col-md-10">
                @Html.TextAreaFor(model => model.Problem , new { htmlAttributes = new { @class = "form-control" } })
                @Html.ValidationMessageFor(model => model.Problem, "", new { @class = "text-danger" })
             </div>
