--- a/StackOverflow/Views/Question/List.cshtml
+++ b/StackOverflow/Views/Question/List.cshtml
@@ -26,7 +26,8 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+@foreach (var item in Model)
+{
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Topic)
@@ -35,10 +36,10 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.User.Username)
+            @Html.DisplayFor(modelItem => item.UserID)
         </td>
         <td>
-            @Html.ActionLink("More", "Details", new { id = item.ID }))
+            @Html.ActionLink("More", "Details", new { id = item.ID })
         </td>
     </tr>
 }
