Update list of question and add question view

--- a/StackOverflow/Views/Question/List.cshtml
+++ b/StackOverflow/Views/Question/List.cshtml
@@ -36,7 +36,11 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.UserID)
+            @using (UserAccountEntities db = new UserAccountEntities())
+            {
+                var usr = db.Users.Where(u => u.ID == item.UserID).FirstOrDefault();
+                @Html.DisplayFor(modelItem => usr.Username)
+            }
         </td>
         <td>
             @Html.ActionLink("More", "Details", new { id = item.ID })
