--- a/StackOverflow/Views/Question/Index.cshtml
+++ b/StackOverflow/Views/Question/Index.cshtml
@@ -44,7 +44,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Problem, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-               @Html.TextAreaFor(model => model.Problem , new { htmlAttributes = new { @class = "form-control" } })
+               @Html.TextAreaFor(model => model.Problem, new { htmlAttributes = new { @class = "form-control" }, @rows = 10, @cols = 50 })
                @Html.ValidationMessageFor(model => model.Problem, "", new { @class = "text-danger" })
             </div>
         </div>
