finish question adding

--- a/StackOverflow/Views/Shared/_Layout.cshtml
+++ b/StackOverflow/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                     else
                     {
                         <li>@Html.ActionLink("Log out", "Log_out", "Account")</li>
-                        <li>@Html.ActionLink("Edit Profile", "Edit", "Account", new { id = Session["ID"] },null)</li>
+                        <li>@Html.ActionLink(Session["Username"].ToString(), "Edit", "Account", new { id = Session["ID"] },null)</li>
                     }
                 </ul>
             </div>
