--- a/StackOverflow/Views/Question/Index.cshtml
+++ b/StackOverflow/Views/Question/Index.cshtml
@@ -13,17 +13,15 @@
     <div class="form-horizontal">
         <h4>Question</h4>
         <hr />
+    
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
      
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.UserID, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UserID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UserID, "", new { @class = "text-danger" })
+        @if (ViewBag.Message != null)
+        {
+            <div class="form-group">
+                <div class="col-md-10">@ViewBag.Message</div>
             </div>
-        </div>*@
-
+        }
 
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -51,7 +49,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Post" class="btn btn-default" />
+                <input type="submit" value="Post" class="btn btn-default"/>
             </div>
         </div>
     </div>
