--- a/StackOverflow/Views/Shared/_Layout.cshtml
+++ b/StackOverflow/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                     <li>@Html.ActionLink("List question","List","Question")</li>
                     @if(Session["ID"] != null)
                     {
-                        <li>@Html.ActionLink("Your questions", "UserQuestion","Qusetion")</li>
+                        <li>@Html.ActionLink("Your questions", "UserQuestion", "Question")</li>
                     }
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
