deteils your question

--- a/StackOverflow/Views/Question/Details.cshtml
+++ b/StackOverflow/Views/Question/Details.cshtml
@@ -1,12 +1,11 @@
 ﻿@model StackOverflow.Question
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Details";
 }
 
-<h2>Delete</h2>
+<h2>Details</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Question</h4>
     <hr />
@@ -28,7 +27,15 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.User.Username)
+            @Html.DisplayNameFor(model => model.Problem)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Problem)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.User.FirstName)
         </dt>
 
         <dd>
@@ -36,17 +43,12 @@
             {
                 var usr = db.Users.Where(u => u.ID == Model.UserID).FirstOrDefault();
                 @Html.DisplayFor(modelItem => usr.Username)
-           }
+            }
         </dd>
 
     </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
 </div>
+<p>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Back to List", "Index")
+</p>
